--- a/src/ika/gui/LocalScaleRotationInfoPanel.form
+++ b/src/ika/gui/LocalScaleRotationInfoPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.2" maxVersion="1.2" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -17,8 +17,10 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="scaleLabel">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Lucida Grande" size="10" style="0"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
+          <FontInfo relative="true">
+            <Font component="scaleLabel" property="font" relativeSize="true" size="-2"/>
+          </FontInfo>
         </Property>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="toolTipText" type="java.lang.String" value="Scale at the mouse pointer. Only available for the old map."/>
@@ -34,8 +36,10 @@
     </Component>
     <Component class="javax.swing.JLabel" name="rotationLabel">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Lucida Grande" size="10" style="0"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
+          <FontInfo relative="true">
+            <Font component="rotationLabel" property="font" relativeSize="true" size="-2"/>
+          </FontInfo>
         </Property>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="toolTipText" type="java.lang.String" value="Rotation at the mouse pointer. Only available for the old map."/>
@@ -51,8 +55,10 @@
     </Component>
     <Component class="javax.swing.JLabel" name="scaleTextLabel">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Lucida Grande" size="10" style="0"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
+          <FontInfo relative="true">
+            <Font component="scaleTextLabel" property="font" relativeSize="true" size="-2"/>
+          </FontInfo>
         </Property>
         <Property name="text" type="java.lang.String" value="Local Scale : "/>
         <Property name="toolTipText" type="java.lang.String" value="Scale at the mouse pointer. Only available for the old map."/>
@@ -65,8 +71,10 @@
     </Component>
     <Component class="javax.swing.JLabel" name="rotationTextLabel">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Lucida Grande" size="10" style="0"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
+          <FontInfo relative="true">
+            <Font component="rotationTextLabel" property="font" relativeSize="true" size="-2"/>
+          </FontInfo>
         </Property>
         <Property name="text" type="java.lang.String" value="Local Rotation : "/>
         <Property name="toolTipText" type="java.lang.String" value="Rotation at the mouse pointer. Only available for the old map."/>
